syntax = "proto3";
package bettery.events.v1;

option go_package = "bettery/x/events/types";

// Events defines the Events message.
message Events {
  uint64 id = 1;
  string creator = 2;
  string question = 3;
  repeated string answers = 4;
  repeated uint64 answers_pool = 5;
  uint64 end_time = 6;
  uint64 start_time = 7;
  string category = 8;
  string status = 9;
  repeated string participants = 10;
}
